# twiliosms4django

./: .coveragerc  .gitignore  .repo-metadata.json  LICENSE  MANIFEST.in  Makefile  README.md  runtests.py  setup.cfg
accounts/: admin.py  models.py  signals.py
accounts/migrations/: 0001_initial.py
config/: settings.py
requirements/: requirements-codestyle.txt  requirements-testing.txt
twiliosms/: admin.py  apps.py
twiliosms/migrations/: 0001_initial.py
twiliosms/models/: __init__.py  base.py  sms.py  twilionumber.py  twiliosettings.py
twiliosms/tests/: tests_smoke.py
