[metadata]
name = twiliosms
version = 0.1
description = About this app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/user/sms4django
project_urls =
    SmS4Django documentation = https://app.readthedocs.io/en/latest/
    SmS4Django source = https://github.com/user/sms4django

author = Author
author_email = author@email.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.6

install_requires=[]
include_package_data = true
packages = twiliosms
